# web3-name-service-utils

./: Cargo.toml  README.md
crates/autoproject/src/template/program/: _Cargo.toml
crates/benchviz/: Cargo.toml
crates/benchviz/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: compute_record_hash.rs  compute_record_hash_v2.rs
crates/test-utils/: Cargo.toml
crates/utils/: Cargo.toml
crates/utils/src/: declare_id_with_central_state.rs  lib.rs  tokens.rs
