[package]
name = "web3-macros"
version = "0.0.2"
authors = ["Fan Mocheng <leftear1321.@gmail.com>"]
edition = "2021"
description = "rename from Bonfida-utils macros"
license = "MIT"
repository = "https://github.com/git@github.com:left-TTC/web3-name-service-utils.git"

[features]

[lib]
proc-macro = true

[dependencies]
solana-program = "2.1.14"
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
web3-domain-name-service = "0.1.3"
